Refactor emulator class and add cartridge handling functionality - Updated Emulator class to manage window state and cartridge loading - Removed old emulator header file and added new cartridge class - Enhanced CMakeLists to include proper directories - Updated settings for better C++ file associations in VSCode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,9 +3,62 @@
         "cpp": "cd $workspaceRoot/dist && cmake --build . && ./app.exe"
     },
     "code-runner.runInTerminal": true,
+    "C_Cpp.default.compileCommands": "${workspaceFolder}/dist/compile_commands.json",
     "files.associations": {
+        "ostream": "cpp",
+        "array": "cpp",
+        "string": "cpp",
+        "string_view": "cpp",
+        "span": "cpp",
+        "atomic": "cpp",
+        "bit": "cpp",
+        "*.tcc": "cpp",
+        "cctype": "cpp",
+        "charconv": "cpp",
+        "clocale": "cpp",
+        "cmath": "cpp",
+        "compare": "cpp",
+        "concepts": "cpp",
+        "cstdarg": "cpp",
+        "cstddef": "cpp",
+        "cstdint": "cpp",
+        "cstdio": "cpp",
+        "cstdlib": "cpp",
+        "ctime": "cpp",
+        "cwchar": "cpp",
+        "cwctype": "cpp",
+        "deque": "cpp",
+        "unordered_map": "cpp",
+        "vector": "cpp",
+        "exception": "cpp",
+        "algorithm": "cpp",
+        "functional": "cpp",
+        "iterator": "cpp",
+        "memory": "cpp",
+        "memory_resource": "cpp",
+        "numeric": "cpp",
+        "optional": "cpp",
+        "random": "cpp",
+        "system_error": "cpp",
+        "tuple": "cpp",
+        "type_traits": "cpp",
+        "utility": "cpp",
+        "format": "cpp",
+        "fstream": "cpp",
+        "initializer_list": "cpp",
+        "iosfwd": "cpp",
         "iostream": "cpp",
-        "ostream": "cpp"
+        "istream": "cpp",
+        "limits": "cpp",
+        "new": "cpp",
+        "numbers": "cpp",
+        "stdexcept": "cpp",
+        "streambuf": "cpp",
+        "text_encoding": "cpp",
+        "cfenv": "cpp",
+        "cinttypes": "cpp",
+        "typeinfo": "cpp",
+        "variant": "cpp"
     },
-    "C_Cpp.default.compileCommands": "${workspaceFolder}/dist/compile_commands.json"
+    "C_Cpp.errorSquiggles": "enabled"
 }
